# PyMD

./: .dockerignore  .gitignore  AGENTS.md  AI_USAGE_GUIDE.md  ARCHITECTURE_v2.0.md  BUILD_FIX_GUIDE.md  BUILD_SOLUTION_SUMMARY.md  BUILD_WINDOWS_EXE.md  CHANGELOG_v1.1.0.md  CHAT_ENHANCEMENT_PLAN.md  COMPLETE_USER_GUIDE.md  COMPLETE_USER_GUIDE_en.md  DEPLOYMENT_MODES.md  DESIGN_SYSTEM.md  DISCOVERY_RELEASE_NOTES.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_GUIDE_en.md  Dockerfile  EVOLUTION_PLAN.md  EXAMPLE.md  EXAMPLE_en.md  FEATURE_PLAN.md  FEATURE_UPDATE_REPORT.md  FILE_ASSOCIATION_GUIDE.md  FILE_ASSOCIATION_GUIDE_en.md  IMAGE_FEATURE_GUIDE.md  IMAGE_FIX_SUMMARY.md  LATEX_RENDERING_FIX.md  LICENSE  LOCAL_VALIDATION.md  MD_FILE_ASSOCIATION_GUIDE.md  OPTIMIZATION_PROPOSAL.md  PDF_EXPORT_IMPROVEMENTS.md  PHASE2_COMPLETION_REPORT.md  PORTABLE_RUNTIME_PLAN.md  PROJECT_BLUEPRINT.md  PROJECT_SUMMARY.md  PyMDEditor.spec  QUICKSTART.md  QUICKSTART_en.md  (+59 more)
.github/: FUNDING.yml
.github/prompts/: doc-cleanup.prompt.md
.github/workflows/: deploy.yml  deploy.yml.disabled
Output/wechat_md_test/: Private_Chat.md  Project_Group.md
PyMDEditor_Distribution/: QUICKSTART.md  README.md  run_editor.bat  run_editor.ps1
data/: chat_history.json  wechat_sample.csv
deploy/customer-subdomain/: .env.example  Caddyfile.internal-dns.example  Caddyfile.tunnel-origin.example  README.md  docker-compose.yml
docs/: app.js  index.html  manifest.json  style.css  sw.js
prototypes/: mood_board_concept.html  muse_concept.html
tools/: README.md  wechat_csv_to_md.py  wechat_db_to_md.py
(+37 files in other folders)
