[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pymd-editor"
version = "0.4.0"
description = "PyMD Editor — local-first Markdown and PDF editor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown2>=2.4.0",
    "python-docx>=1.1.0",
    "httpx>=0.25.0",
    "pdf2docx>=0.5.6",
    "python-pptx>=0.6.23",
    "pymupdf>=1.22.5",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]
desktop = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
]

[project.scripts]
pymd = "pymd_editor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
